fix horizontal scroll

--- a/plugins/player-inventory.css
+++ b/plugins/player-inventory.css
@@ -1,7 +1,3 @@
-.inventory-box {
-  padding-right: 16px;
-}
-
 .inventory-box .container {
 	width: max-content;
 }
@@ -69,9 +65,9 @@
 	padding-right: .3rem;
 }
 
-/*.inventory-box .keys td {
-	line-height: 1.2rem;
-}*/
+#dialog-inventory.inventory-box {
+  padding-right: 16px;
+}
 
 .inventory-box.mobile {
 	position: absolute;
@@ -84,6 +80,10 @@
 }
 .inventory-box.mobile .container {
 	width: unset;
+}
+
+.inventory-box.mobile button {
+	width: 100%;
 }
 
 /* popup */
